<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NasaPod</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="theme" tools:keep="@string/theme">Theme</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="night_mode">Night Mode</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="attachment_summary_off" tools:keep="@string/attachment_summary_off">
        Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="detail_nasa_image">Detail Nasa image</string>
    <string name="nasa_image">Nasa Image</string>
    <string name="args_transition_apod_name">%s_transition_name</string>
    <string name="date_picker">Date Picker</string>
    <string name="explanation">Explanation</string>
    <string name="about">About</string>
    <string name="about_description">(APOD)Astronomy Picture of the Day and is the largest
    collection of annotated astronomical images on the internet.
        Authors &amp; editors: Robert Nemiroff (MTU) &amp; Jerry Bonnell (UMCP)
        NASA Official: Phillip Newman Specific rights apply.
        NASA Web Privacy Policy and Important Notices
        A service of: ASD at NASA / GSFC &amp; Michigan Tech. U.</string>

    <string name="icon_info">"Icon made by Icongeek26 from www.flaticon.com"</string>
    <string name="icon">Icon</string>
    <string name="range_date">Range date</string>
    <string name="permission_write_external_rationale_message">We need permission to write to
        external storage to save your images</string>
    <string name="download_picture">Download Picture</string>
    <string name="copyright">Copyright</string>

</resources>
