<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/range_date_title"
        android:title="@string/range_date"
        app:showAsAction="always"
        android:visible="false"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/date_picker_menu_item"
        android:icon="@drawable/ic_icon_calendar"
        android:title="@string/date_picker"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/settings_menu_item"
        app:showAsAction="never"
        android:title="@string/settings"
        />

    <item android:id="@+id/about_menu_item"
        app:showAsAction="never"
        android:title="@string/about"/>

</menu>