<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:background="?attr/CardViewColor"
        android:padding="16dp">


        <ImageView
            android:id="@+id/image_view_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/nasa_image"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_view_titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="Title"
            android:textColor="?attr/textColor"
||||||| merged common ancestors
            android:text="Title"
            android:textColor="@android:color/black"
=======
            android:text="@string/title"
            android:textColor="@color/white"
>>>>>>> master
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:textColor="?attr/textColor"
            android:text="Date: " />
||||||| merged common ancestors
            android:text="Date: " />
=======
            android:text="@string/date"
            android:textColor="@color/white" />
>>>>>>> master

    </LinearLayout>

</androidx.cardview.widget.CardView>